# bili-subtitle-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
.hermes/plans/: 2026-07-02_222712-bili-notes-persistence-retrieval.md
config/: service.example.yaml
src/bili_subtitle_service/: __init__.py  app.py  cli.py  config.py  extractor.py  models.py  notes.py  retrieval.py  text.py  wbi.py
src/bili_subtitle_service/mcp/: server.py  tools.py
tests/: test_api.py  test_config.py  test_extractor.py  test_notes.py  test_retrieval.py  test_text_cleaning.py  test_url_parsing.py  test_wbi.py
tests/mcp/: test_http_server.py  test_note_tools.py
