[project]
name = "bili-subtitle-service"
version = "0.1.0"
description = "Bilibili subtitle extraction service and MCP adapter for Hermes/Alice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "httpx[socks]>=0.28.0",
  "mcp>=1.11.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0",
  "types-PyYAML>=6.0.12.20250516",
]

[project.scripts]
bili-subtitle-service = "bili_subtitle_service.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bili_subtitle_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
